[package]
name = "vapor-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
clap = { version = "4.5.4", features = ["derive"] }
prettytable-rs = "0.10.0"
anyhow = "1.0.82"
rustyline = "14.0.0"
csv = "1.3.0"
atty = "0.2.14"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
