[package]
name = "vapor-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
prettytable-rs = "0.10"
rusqlite = { version = "0.29", features = ["bundled"] }
csv = "1.3"
atty = "0.2"
rustyline = "12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
dirs = "5.0"
